--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-font": "~11.4.0"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
