--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
