--- a/app.json
+++ b/app.json
@@ -29,7 +29,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ebrahem_khaled3.FantazyZone"
     },
     "web": {
       "favicon": "./assets/favicon.png"
