--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native": "0.72.6",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.11.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-table-component": "^1.2.2"
